* vignettes/irace-package.bib: Add missing entries.

--- a/vignettes/irace-package.bib
+++ b/vignettes/irace-package.bib
@@ -12,7 +12,11 @@
 
 @string{add-heidelberg = { Heidelberg }}
 
+@string{add-ny = { New York, NY }}
+
 @string{aaaip-pub = {{AAAI} Press}}
+
+@string{acm-pub = {ACM Press}}
 
 @string{ieeep = {IEEE Press}}
 
@@ -32,6 +36,10 @@
 
 @string{cec2006 = proc_of_the # {2006} # cec # { 2006)}}
 
+@string{gecco = proc_of_the # {Genetic and Evolutionary Computation Conference, GECCO }}
+
+@string{gecco2013 = gecco # {2013}}
+
 @string{icml = { International Conference on Machine Learning, {ICML} }}
 
 @string{icml2014 = proc_of_the # {31st} # icml # {2014}}
@@ -48,6 +56,8 @@
 
 @string{telo = {ACM Transactions on Evolutionary Learning and Optimization}}
 
+@string{alba_e = { Alba, Enrique }}
+
 @string{balaprakash = {  Prasanna Balaprakash }}
 
 @string{bartz-beielstein = { Thomas Bartz-Beielstein }}
@@ -57,6 +67,8 @@
 @string{biedenkapp = { Biedenkapp, Andr{\'e} }}
 
 @string{birattari = { Mauro Birattari }}
+
+@string{blum = { Christian Blum }}
 
 @string{branke = { J{\"u}rgen Branke }}
 
@@ -76,6 +88,8 @@
 
 @string{hutter = { Frank Hutter }}
 
+@string{lau_hc = { Hoong Chuin Lau }}
+
 @string{leyton-brown = { Kevin Leyton-Brown }}
 
 @string{lindauer_m = { Marius Thomas Lindauer }}
@@ -83,6 +97,8 @@
 @string{lopez-ibanez = { Manuel L{\'o}pez-Ib{\'a}{\~n}ez }}
 
 @string{mcgeoch_cc = { Catherine C. McGeoch }}
+
+@string{montesdeoca = { Marco A. {Montes de Oca} }}
 
 @string{paquete = { Lu{\'i}s Paquete }}
 
@@ -360,6 +376,13 @@
   doi = {10.1007/978-3-642-34413-8_14}
 }
 
+@incollection{YuaStuMonLauBir13,
+  author = yuan_z # and # montesdeoca # and # stuetzle # and # lau_hc # and # birattari,
+  title = {An Analysis of Post-selection in Automatic Configuration},
+  pages = {1557--1564},
+  crossref = {GECCO2013}
+}
+
 @book{AAAI2017,
   booktitle = aaai,
   editor = {Satinder P. Singh and Shaul Markovitch},
@@ -391,6 +414,17 @@
   month = jul,
   publisher = ieeep,
   address = ieeep-ad
+}
+
+@book{GECCO2013,
+  title = {Genetic and Evolutionary Computation Conference, GECCO 2013,
+                  Proceedings, Amsterdam, The Netherlands, July 6-10, 2013},
+  booktitle = gecco2013,
+  editor = blum # and # alba_e,
+  year = 2013,
+  publisher = acm-pub,
+  address = add-ny,
+  isbn = {978-1-4503-1963-8}
 }
 
 @proceedings{ICML2014,
@@ -441,4 +475,3 @@
   publisher = springer,
   address = add-cham
 }
-
