The ACOTSP example in the user-guide now uses the ACOTSPQAP code and provides more guidance in case of errors.

--- a/inst/examples/acotsp/README
+++ b/inst/examples/acotsp/README
@@ -1,14 +1,15 @@
 Example configuration scenario: ACOTSP
-=====================================
+======================================
 
 This example scenario shows how irace can be used to tune
 an optimization algorithm.
 
 ACOTSP is a software that implements various Ant Colony algorithms
-for the symmetric Traveling Salesman Problem. 
-The ACOTSP software is available at:
+for the symmetric Traveling Salesman Problem.
 
-http://www.aco-metaheuristic.org/aco-code/
+We will use the version provided here:
+
+https://github.com/MLopez-Ibanez/ACOTSPQAP/archive/refs/heads/master.zip
 
 TSP instances and more information is available at:
 
@@ -17,6 +18,3 @@ https://iridia.ulb.ac.be/supp/IridiaSupp2016-003/index.html
 You should use the instances from this file:
 
 https://iridia.ulb.ac.be/supp/IridiaSupp2016-003/scenarios/acotsp/instances.tar.gz
-
-
-
